[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/ScoreScreen.gd" type="Script" id=1]
[ext_resource path="res://sprites/backgrounds/score_background.png" type="Texture" id=2]
[ext_resource path="res://resources/fonts/GUIfontInfo.tres" type="DynamicFont" id=3]
[ext_resource path="res://resources/fonts/AmaticSC-Bold.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=2]
resource_name = "Fading"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ) ]
}

[node name="Score" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 0, -748 )
scale = Vector2( 1.247, 1.247 )
texture = ExtResource( 2 )
offset = Vector2( 512, 300 )

[node name="Lives" type="Label" parent="."]
margin_left = 14.3538
margin_top = -713.549
margin_right = 1066.35
margin_bottom = -586.549
custom_fonts/font = ExtResource( 3 )
text = "LIVES.......................................15505"

[node name="Sprays" type="Label" parent="."]
visible = false
margin_left = 14.3538
margin_top = -583.549
margin_right = 1066.35
margin_bottom = -456.549
custom_fonts/font = ExtResource( 3 )
text = "SPRAYS.....................................15505"

[node name="Bonus" type="Label" parent="."]
visible = false
margin_left = 14.3538
margin_top = -443.549
margin_right = 1081.35
margin_bottom = -316.549
custom_fonts/font = ExtResource( 3 )
text = "BONUS......................................15505"

[node name="Total" type="Label" parent="."]
visible = false
margin_left = 14.3538
margin_top = -233.549
margin_right = 830.354
margin_bottom = -106.549
custom_fonts/font = ExtResource( 3 )
text = "TOTAL.............................1550005"

[node name="ContinueMessage" type="Label" parent="."]
visible = false
margin_left = -2.0
margin_top = -83.0
margin_right = 1027.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 1 )
text = "PRESS ENTER TO CONTINUE"
align = 1

[node name="TimerStart" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="TimerPoints" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="CanvasModulate" type="CanvasModulate" parent="."]

[node name="FadingAnim" type="AnimationPlayer" parent="."]
anims/Fading = SubResource( 2 )

[connection signal="timeout" from="TimerStart" to="." method="start"]
[connection signal="timeout" from="TimerPoints" to="." method="update_total"]
